BV-10 - Make build and tests run in TeamCity
- Add test.
- Add test task.